--- a/dcnm/create_fabric.yml
+++ b/dcnm/create_fabric.yml
@@ -12,11 +12,13 @@
                 anycast_rp_ip_range: 10.65.0.0/16
                 bgp_as: 65535.65535
                 replication_mode: Ingress
+                vrf_lite_autoconfig: "0"
             -   fabric_name: MC-Fabric
                 anycast_gw_mac: 00ffeeddccbb
                 advertise_pip_bgp: False
                 anycast_bgw_advertise_pip: False
                 bgp_as: 65535.0
+                vrf_lite_autoconfig: 1
             -   fabric_name: AS_Plain
                 anycast_gw_mac: 00dd.ccbb.aa00
                 bgp_as: 4294967295
