fix breakage in _validate_dependencies, more...
Fix _mandatory_params mandatory entries for auto_symmetric_default_vrf, auto_symmetric_vrf_lite, and auto_vrflite_ifc_default_vrf

Add support for default_vrf_redis_bgp_rmap which is required by auto_vrflite_ifc_default_vrf.

--- a/dcnm/create_fabric.yml
+++ b/dcnm/create_fabric.yml
@@ -16,6 +16,7 @@
                 auto_symmetric_vrf_lite: True
                 auto_vrflite_ifc_default_vrf: True
                 auto_symmetric_default_vrf: True
+                default_vrf_redis_bgp_rmap: extcon-rmap-filter
             -   fabric_name: MC-Fabric
                 anycast_gw_mac: 00ffeeddccbb
                 advertise_pip_bgp: False
