--- a/dcnm/create_fabric.yml
+++ b/dcnm/create_fabric.yml
@@ -21,6 +21,10 @@
                 anycast_gw_mac: 00ffeeddccbb
                 advertise_pip_bgp: False
                 anycast_bgw_advertise_pip: False
+                bfd_enable: True
+                bfd_auth_enable: True
+                bfd_auth_key: "asadflkajsdff"
+                bfd_auth_key_id: "100"
                 bgp_as: 65535.0
                 vrf_lite_autoconfig: 1
             -   fabric_name: AS_Plain
