--- a/dcnm/create_fabric.yml
+++ b/dcnm/create_fabric.yml
@@ -63,3 +63,6 @@
                 grfield_debug_flag: Enable
                 brownfield_network_name_format: "Vlan$$VLAN_ID$$_VNI$$VNI$$"
                 brownfield_skip_overlay_network_attachments: True
+            -   fabric_name: CDP
+                bgp_as: 4
+                cdp_enable: True
