--- a/dcnm/create_fabric.yml
+++ b/dcnm/create_fabric.yml
@@ -11,6 +11,7 @@
                 anycast_gw_mac: 00:aa:bb:cc:dd:ee
                 anycast_rp_ip_range: 10.65.0.0/16
                 bgp_as: 65535.65535
+                dci_subnet_range: 11.22.33.0/24
                 replication_mode: Ingress
                 vrf_lite_autoconfig: 1
                 auto_symmetric_vrf_lite: True
