--- a/dcnm/create_fabric.yml
+++ b/dcnm/create_fabric.yml
@@ -70,3 +70,9 @@
             -   fabric_name: COPP
                 bgp_as: 5
                 copp_policy: dense
+            -   fabric_name: Queuing
+                bgp_as: 6
+                enable_default_queuing_policy: True
+                default_queuing_policy_cloudscale: queuing_policy_default_4q_cloudscale
+                default_queuing_policy_other: queuing_policy_default_other
+                default_queuing_policy_r_series: queuing_policy_default_r_series
