--- a/examples/multiple_fabrics.yaml
+++ b/examples/multiple_fabrics.yaml
@@ -70,6 +70,10 @@
             -   fabric_name: COPP
                 bgp_as: 5
                 copp_policy: dense
+            -   fabric_name: DNS
+                bgp_as: 1
+                dns_server_ip_list: "1.1.1.1, 2001:1:2::1, 2.2.2.2"
+                dns_server_vrf: "management, foo, bar"
             -   fabric_name: Queuing
                 bgp_as: 6
                 enable_default_queuing_policy: True
