--- a/examples/stp_rpvst.yaml
+++ b/examples/stp_rpvst.yaml
@@ -9,4 +9,4 @@
             bgp_as: 1
             stp_root_option: rpvst+
             stp_bridge_priority: 4096
-            mst_instance_range: 0,10-11,13,14-15
+            stp_vlan_range: 1,10-11,13,14-15
