--- a/dcnm/examples/ntp_server.yaml
+++ b/dcnm/examples/ntp_server.yaml
@@ -5,7 +5,7 @@
     - cisco.dcnm.dcnm_easy_fabric:
         state: merged
         config:
-        -   fabric_name: DNS
+        -   fabric_name: NTP
             bgp_as: 1
-            dns_server_ip_list: "1.1.1.1, 2001:1:2::1, 2.2.2.2"
-            dns_server_vrf: "management, default, admin"
+            ntp_server_ip_list: "1.1.1.1, 2001:1:2::1, 2.2.2.2"
+            ntp_server_vrf: "management, default, admin"
