--- a/dcnm/examples/aaa.yaml
+++ b/dcnm/examples/aaa.yaml
@@ -18,30 +18,31 @@
             config:
             -   fabric_name: AAA
                 bgp_as: 1
-                # Enable AAA IP Authorization (NDFC Advanced tab)
+                # aaa_remote_ip_enabled: Enable AAA IP Authorization
+                # (NDFC Advanced tab)
                 aaa_remote_ip_enabled: True
-                # bootstrap_enable must be True for enable_aaa
+                # bootstrap_enable: must be True for enable_aaa
                 # to have any effect
                 bootstrap_enable: True
-                # Enable AAA config for bootstrapped devices
+                # enable_aaa: Enable AAA config for bootstrapped devices
                 enable_aaa: True
                 # enable_aaa controls whether the following config is applied
                 # to bootstrapped devices
                 aaa_server_conf: |
-                    aaa group server radius radius 
+                    aaa group server radius RADIUS
                     snmp-server aaa-user cache-timeout 3600
                     no snmp-server disable snmp-aaa sync
                     no snmp-server enable traps aaa server-state-change
-                    aaa authentication login default local 
-                    aaa authorization ssh-publickey default local 
-                    aaa authorization ssh-certificate default local 
-                    aaa accounting default local 
-                    aaa user default-role 
-                    aaa authentication login default fallback error local 
-                    aaa authentication login console fallback error local 
-                    no aaa authentication login invalid-username-log 
-                    no aaa authentication login error-enable 
-                    no aaa authentication login mschap enable 
-                    no aaa authentication login mschapv2 enable 
-                    no aaa authentication login chap enable 
-                    no aaa authentication login ascii-authentication 
+                    aaa authentication login default local
+                    aaa authorization ssh-publickey default local
+                    aaa authorization ssh-certificate default local
+                    aaa accounting default local
+                    aaa user default-role
+                    aaa authentication login default fallback error local
+                    aaa authentication login console fallback error local
+                    no aaa authentication login invalid-username-log
+                    no aaa authentication login error-enable
+                    no aaa authentication login mschap enable
+                    no aaa authentication login mschapv2 enable
+                    no aaa authentication login chap enable
+                    no aaa authentication login ascii-authentication
