--- a/dcnm/examples/vrf_lite.yaml
+++ b/dcnm/examples/vrf_lite.yaml
@@ -7,6 +7,7 @@
         config:
         -   fabric_name: VRF_LITE
             bgp_as: 1
+            auto_unique_vrf_lite_ip_prefix: True
             vrf_lite_autoconfig: 1
             auto_symmetric_vrf_lite: True
             auto_vrflite_ifc_default_vrf: True
