Support ptp and some vpc parameters, more...
VerifyFabricParams(). _validate_ipv4_address_within_subnet ()
  - Catch ValueError when host bits are set.

examples/fabric_config.yaml - set parameters to defaults

For vpc, add the following:

fabric_vpc_qos
fabric_vpc_qos_policy_name

test_fabric_params.py
  - fix alphabetical order of test functions
  - add ptp test

--- a/dcnm/examples/fabric_config.yaml
+++ b/dcnm/examples/fabric_config.yaml
@@ -7,5 +7,5 @@
         config:
         -   fabric_name: Fabric_Config
             bgp_as: 1
-            fabric_interface_type: unnumbered
-            fabric_mtu: 9214
+            fabric_interface_type: p2p
+            fabric_mtu: 9216
