--- a/dcnm/dcnm_image_upgrade/example_playbook.yaml
+++ b/dcnm/dcnm_image_upgrade/example_playbook.yaml
@@ -3,17 +3,31 @@
     tasks:
     -   name: stage/upgrade devices
         cisco.dcnm.dcnm_image_upgrade:
-            state: merged
+            state: query                        # Mandatory, one of: merged, deleted, query
             config:
-                policy: NR3F                  # mandatory, policy name to which switch is attached
-                stage: true                   # optional, default is true, trigger stage image if the image is not staged
-                upgrade: true                 # optional, default is true, trigger upgrade if image is staged
-                switches:                     # mandatory, list of dict, config per switch override the global config
-                    -   ip_address: 172.22.150.103
-                        policy: NR3F
-                        stage: true
-                        upgrade: false
-                    # - ip_address: 192.168.123.102
-                    #   policy: NR3F
-                    #   stage: true
-                    #   upgrade: true
+                policy: KMR5                    # Policy name to which switches are attached
+                                                # - mandatory if not specified in switches list
+                stage: true                     # Trigger stage image if the image is not staged
+                                                # - optional
+                                                # - default: true
+                                                # - ignored if state is deleted or query
+                upgrade: true                   # Trigger upgrade if image is staged
+                                                # - optional
+                                                # - default: true
+                                                # - ignored if state is deleted or query
+                switches:                       # Mandatory list of dict, per-switch override of the global config
+                -   ip_address: 172.22.150.102
+                    policy: KMR5
+                    stage: true
+                    upgrade: true
+                -   ip_address: 172.22.150.103
+                    policy: NR2F
+                    stage: true
+                    upgrade: true
+                -   ip_address: 172.22.150.113
+                    policy: KMR5
+        register: result
+    -   name: print result
+        ansible.builtin.debug:
+            var: result
+
