--- a/dcnm/dcnm_image_upgrade/example_playbook_query.yaml
+++ b/dcnm/dcnm_image_upgrade/example_playbook_query.yaml
@@ -1,19 +1,19 @@
 -   hosts: ndfc
     gather_facts: false
     tasks:
-    -   name: query policies
+    -   name: query switch ISSU status
         cisco.dcnm.dcnm_image_upgrade:
             state: query                        # Mandatory, one of: merged, deleted, query
             config:
-                policy: KMR5                    # Policy name to which switches are attached
+                #policy: KMR5                    # Policy name to which switches are attached
                                                 # - mandatory if not specified in switches list
                 switches:                       # Mandatory list of dict, per-switch override of the global config
                 -   ip_address: 172.22.150.102
-                    policy: KMR5
+                    # policy: KMR5
                 -   ip_address: 172.22.150.103
-                    policy: NR2F
+                    # policy: NR2F
                 -   ip_address: 172.22.150.113
-                    policy: KMR5
+                    # policy: KMR5
         register: result
     -   name: print result
         ansible.builtin.debug:
